# svn2git

./: .gitignore  Cargo.toml  README.md  README_CN.md
src/: command.rs  error.rs  lib.rs  main.rs  sync.rs
src/config/: disk.rs  manager.rs  mod.rs  reocrd.rs
src/interactor/: helper.rs  mod.rs  user.rs
src/ops/: git.rs  git_operations.rs  git_provider.rs  mock_git.rs  mod.rs  real_git.rs  svn.rs
src/test_utils/: mock_svn.rs  mod.rs  test_factories.rs
tests/: common.rs  improved_git_commit_test.rs  integration_tests.rs  mock_integration_tests.rs  test_factories.rs
