[package]
name = "svn2git"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inquire = "0.7"
clap = { version = "4", features = ["derive"] }
roxmltree = "0.20"

[dev-dependencies]
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
